Se generan los estilos para desktop y el media queries para pantallas 1024px

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- displays site properly based on user's device -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/style.css">
+  <link rel="stylesheet" href="./assets/desktop.css" media="screen and (min-width:1024px)">
   <title>Coding Bootcamp Testimonials Slider</title>
 </head>
 
